modification emplacement images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,7 +2593,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/photo-1470790376778-a9fbc86d70e2.webp");
+		background-image: url("images/overlay.png"), url("../../images/Presentation.png");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								150%;
@@ -2624,7 +2624,7 @@ input, select, textarea {
 		}
 
 		#header strong, #header b {
-			color: #ffffff;
+			color: #ffe98b;
 		}
 
 		#header h2, #header h3, #header h4, #header h5, #header h6 {
@@ -2632,7 +2632,7 @@ input, select, textarea {
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.575);
+			color: #fff2bb;
 			font-size: 1.35em;
 			line-height: 1.75em;
 			margin: 0;
@@ -2650,11 +2650,11 @@ input, select, textarea {
 	}
 
 		#footer .icons a {
-			color: rgba(255, 255, 255, 0.4);
+			color:#fff2bb;
 		}
 
 	#footer .copyright {
-		color: rgba(255, 255, 255, 0.4);
+		color:#fff2bb;
 		font-size: 0.8em;
 		list-style: none;
 		margin: 1em 0 0 0;
@@ -2662,7 +2662,7 @@ input, select, textarea {
 	}
 
 		#footer .copyright li {
-			border-left: solid 1px rgba(255, 255, 255, 0.25);
+			border-left: solid 1px #fff2bb;
 			display: inline-block;
 			line-height: 1em;
 			margin-left: 0.75em;
